Update routes
